mejoro solucion y agg punto 5

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -272,42 +272,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, indice, solucion, max_jugadores, len_pedidos):\n",
+    "    cantidad_de_jugadores = len(solucion_actual)\n",
+    "    largo_solucion = len(solucion)\n",
+    "    if(cantidad_de_jugadores >= len_pedidos or cantidad_de_jugadores >= max_jugadores or (largo_solucion > 0 and cantidad_de_jugadores == largo_solucion)):\n",
+    "        return \n",
+    "    \n",
+    "    for i in range(indice, len_pedidos):\n",
+    "        pedido_actual = pedidos_de_prensa[i]\n",
+    "        for jugador in pedido_actual:\n",
+    "            if jugador not in solucion_actual:\n",
+    "                solucion_actual.append(jugador)\n",
+    "                \n",
+    "                if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
+    "                    largo_solucion = len(solucion)\n",
+    "                    if len(solucion_actual) < largo_solucion or largo_solucion == 0:\n",
+    "                        solucion[:] = solucion_actual\n",
+    "                        \n",
+    "                conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, max_jugadores, len_pedidos)\n",
+    "                solucion_actual.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Colidio', \"Barcon't\"], 0.011459589004516602)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.0019283294677734375)\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "\n",
-    "def conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, indice, solucion, max_jugadores):\n",
-    "    cantidad_de_jugadores = len(solucion_actual)\n",
-    "    \n",
-    "    if(cantidad_de_jugadores >= len(pedidos_de_prensa) or cantidad_de_jugadores >= max_jugadores):\n",
-    "        return \n",
-    "    \n",
-    "    for i in range(indice, (len(preseleccion)-1)):\n",
-    "        solucion_actual.append(preseleccion[(i)])\n",
-    "        if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
-    "            if len(solucion_actual) < len(solucion) or len(solucion) == 0:\n",
-    "                solucion[:] = solucion_actual\n",
-    "        conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, i + 1, solucion, max_jugadores)\n",
-    "        solucion_actual.remove(solucion_actual[len(solucion_actual) - 1])\n",
-    "\n",
-    "\n",
     "\n",
     "def solucion_para_Scaloni(preseleccion, pedidos_de_prensa):\n",
     "    solucion = []\n",
-    "    solucion_actual = []\n",
     "    tiempo_inicial = time.time()\n",
     "    max_jugadores = len(set([pedido for pedidos in pedidos_de_prensa for pedido in pedidos])) # ver complejidad\n",
-    "    conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, 0, solucion, max_jugadores)\n",
+    "    conjunto_minimo_para_Scaloni(pedidos_de_prensa, [], 0, solucion, max_jugadores, len(pedidos_de_prensa))\n",
     "    tiempo_final = time.time()\n",
     "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
     "    return solucion, tiempo_ejecucion\n",
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +365,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m solucion_200 \u001b[39m=\u001b[39m solucion_para_Scaloni(preseleccion_200, pedidos_prensa_200)\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m tiempo_inicial \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m max_jugadores \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mset\u001b[39m([pedido \u001b[39mfor\u001b[39;00m pedidos \u001b[39min\u001b[39;00m pedidos_de_prensa \u001b[39mfor\u001b[39;00m pedido \u001b[39min\u001b[39;00m pedidos])) \u001b[39m# ver complejidad\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m conjunto_minimo_para_Scaloni(pedidos_de_prensa, [], \u001b[39m0\u001b[39;49m, solucion, max_jugadores, \u001b[39mlen\u001b[39;49m(pedidos_de_prensa))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m tiempo_final \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m tiempo_ejecucion \u001b[39m=\u001b[39m tiempo_final \u001b[39m-\u001b[39m tiempo_inicial\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(solucion_actual) \u001b[39m<\u001b[39m largo_solucion \u001b[39mor\u001b[39;00m largo_solucion \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         solucion[:] \u001b[39m=\u001b[39m solucion_actual\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m, solucion, max_jugadores, len_pedidos)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m solucion_actual\u001b[39m.\u001b[39mpop()\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(solucion_actual) \u001b[39m<\u001b[39m largo_solucion \u001b[39mor\u001b[39;00m largo_solucion \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         solucion[:] \u001b[39m=\u001b[39m solucion_actual\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m, solucion, max_jugadores, len_pedidos)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m solucion_actual\u001b[39m.\u001b[39mpop()\n",
+      "    \u001b[0;31m[... skipping similar frames: conjunto_minimo_para_Scaloni at line 18 (9 times)]\u001b[0m\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(solucion_actual) \u001b[39m<\u001b[39m largo_solucion \u001b[39mor\u001b[39;00m largo_solucion \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         solucion[:] \u001b[39m=\u001b[39m solucion_actual\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m, solucion, max_jugadores, len_pedidos)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m solucion_actual\u001b[39m.\u001b[39mpop()\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m jugador \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m solucion_actual:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     solucion_actual\u001b[39m.\u001b[39mappend(jugador)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mif\u001b[39;00m verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         largo_solucion \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(solucion)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(solucion_actual) \u001b[39m<\u001b[39m largo_solucion \u001b[39mor\u001b[39;00m largo_solucion \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m C:                      \u001b[39m# O(#C) \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(B)):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         \u001b[39mif\u001b[39;00m c \u001b[39min\u001b[39;00m B[i]:            \u001b[39m# O(#B[i])\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m             satisface_Bi[i] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y166sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mall\u001b[39m(satisface_Bi)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "solucion_200 = solucion_para_Scaloni(preseleccion_200, pedidos_prensa_200)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -374,11 +413,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                 0.00139999\n",
-      "7.txt                                   2                           2  Sí                                                 0.00930905\n",
-      "10_pocos.txt                            3                           3  Sí                                                 0.682141\n",
-      "10_varios.txt                           6                           6  Sí                                                59.7369\n",
-      "10_todos.txt                           10                          10  Sí                                               919.637\n"
+      "5.txt                                   2                           2  Sí                                                0.000239134\n",
+      "7.txt                                   2                           2  Sí                                                0.00100827\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.0586791\n",
+      "10_varios.txt                           6                           6  Sí                                                2.21743\n",
+      "10_todos.txt                           10                          10  Sí                                                6.37627\n"
      ]
     }
    ],
@@ -664,6 +703,40 @@
     "  i += 1\n",
     "\n",
     "print(tabulate(resultados_lp_nuestros, headers=['Archivo', 'Cantidad mínima obtenida', 'Es válida?', 'Tiempo de ejecución (s)']))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aproximación "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def solucion_para_Scaloni_LP_aprox(preseleccion, pedidos_de_prensa):\n",
+    "    b = max(pedidos_de_prensa)\n",
+    "    tiempo_inicial = time.time()\n",
+    "    prob = pulp.LpProblem(\"Scaloni\", pulp.LpMinimize)\n",
+    "    x = pulp.LpVariable.dicts(\"x\", preseleccion, lowBound=0, upBound=1, cat=\"Continuous\")\n",
+    "    prob += pulp.lpSum([x[i] for i in preseleccion])\n",
+    "    \n",
+    "    for pedido in pedidos_de_prensa:\n",
+    "        prob += pulp.lpSum([x[jugador] for jugador in pedido]) >= 1\n",
+    "    prob.solve()\n",
+    "    \n",
+    "    # Redondeamos el resultado final\n",
+    "    solucion = [i for i in preseleccion if pulp.value(x[i]) >= 1/b]\n",
+    "    \n",
+    "    tiempo_final = time.time()\n",
+    "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
+    "    return solucion, tiempo_ejecucion"
    ]
   }
  ],
