mejoro solucion y agg punto 5

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -738,6 +738,22 @@
     "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
     "    return solucion, tiempo_ejecucion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algoritmo Greedy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ordeno los pedidos de la prensa por cantidad de repeticiones y agarro los primeros k"
+   ]
   }
  ],
  "metadata": {
