--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +302,8 @@
     "    if len(C) == 0:\n",
     "        return False\n",
     "    \n",
-    "    satisface_Bi = [False] * len(B)\n",
     "    len_B = len(B)\n",
+    "    satisface_Bi = [False] * len_B\n",
     "\n",
     "    for c in C:                      # O(#C) \n",
     "        for i in range(len_B):\n",
@@ -322,14 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, indice, solucion, max_jugadores, len_pedidos):\n",
     "    cantidad_de_jugadores = len(solucion_actual)\n",
     "    largo_solucion = len(solucion)\n",
-    "    if(cantidad_de_jugadores >= len_pedidos or cantidad_de_jugadores >= max_jugadores or (largo_solucion > 0 and cantidad_de_jugadores == largo_solucion)):\n",
+    "    if(cantidad_de_jugadores == len_pedidos or\n",
+    "       cantidad_de_jugadores == max_jugadores or \n",
+    "       (largo_solucion > 0 and cantidad_de_jugadores == largo_solucion)):\n",
     "        return \n",
     "    \n",
     "    for i in range(indice, len_pedidos):\n",
@@ -343,22 +345,22 @@
     "                    if cantidad_de_jugadores < largo_solucion or largo_solucion == 0:\n",
     "                        solucion[:] = solucion_actual\n",
     "                        largo_solucion = cantidad_de_jugadores\n",
-    "                        \n",
-    "                conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, max_jugadores, len_pedidos)\n",
+    "                else:        \n",
+    "                    conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, max_jugadores, len_pedidos)\n",
     "                solucion_actual.pop()\n",
     "                cantidad_de_jugadores -= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 0.0011985301971435547)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.0010504722595214844)\n"
      ]
     }
    ],
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,21 +401,47 @@
     "solucion_7, tiempo_ejecucion_7 = solucion_para_Scaloni(pedidos_prensa_7)\n",
     "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_para_Scaloni(pedidos_prensa_10_pocos)\n",
     "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_para_Scaloni(pedidos_prensa_10_varios)\n",
-    "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(pedidos_prensa_10_todos)"
+    "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(pedidos_prensa_10_todos)\n",
+    "solucion_15, tiempo_ejecucion_15 = solucion_para_Scaloni(pedidos_prensa_15)\n",
+    "# solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)\n",
+    "# solucion_50, tiempo_ejecucion_50 = solucion_para_Scaloni(pedidos_prensa_50)\n",
+    "# solucion_75, tiempo_ejecucion_75 = solucion_para_Scaloni(pedidos_prensa_75)\n",
+    "# solucion_100, tiempo_ejecucion_100 = solucion_para_Scaloni(pedidos_prensa_100)\n",
+    "# solucion_200, tiempo_ejecucion_200 = solucion_para_Scaloni(pedidos_prensa_200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_200 = solucion_para_Scaloni(pedidos_prensa_200)"
+    "solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Barcon't\", 'Riquelme', 'Mauro Zarate', 'Ogro Fabianni', 'Buonanotte']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solucion_20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -433,11 +461,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                0.000248432\n",
-      "7.txt                                   2                           2  Sí                                                0.00107789\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.0611928\n",
-      "10_varios.txt                           6                           6  Sí                                                2.24153\n",
-      "10_todos.txt                           10                          10  Sí                                                6.5127\n"
+      "5.txt                                   2                           2  Sí                                                0.000245571\n",
+      "7.txt                                   2                           2  Sí                                                0.0012486\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.0678949\n",
+      "10_varios.txt                           6                           6  Sí                                                2.15234\n",
+      "10_todos.txt                           10                          10  Sí                                                6.22197\n"
      ]
     }
    ],
