--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,12 +305,12 @@
     "    len_B = len(B)\n",
     "    satisface_Bi = [False] * len_B\n",
     "\n",
-    "    for c in C:                      # O(#C) \n",
+    "    for c in C:                    \n",
     "        for i in range(len_B):\n",
-    "            if c in B[i]:            # O(#B[i])\n",
+    "            if c in B[i]:            \n",
     "                satisface_Bi[i] = True\n",
     "\n",
-    "    return all(satisface_Bi)      # O(#B) "
+    "    return all(satisface_Bi)     "
    ]
   },
   {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +331,7 @@
     "    largo_solucion = len(solucion)\n",
     "    if(cantidad_de_jugadores == len_pedidos or\n",
     "       cantidad_de_jugadores == max_jugadores or \n",
+    "       indice == len_pedidos or\n",
     "       (largo_solucion > 0 and cantidad_de_jugadores == largo_solucion)):\n",
     "        return \n",
     "    \n",
@@ -353,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 0.0010504722595214844)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.000989675521850586)\n"
      ]
     }
    ],
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
     "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_para_Scaloni(pedidos_prensa_10_pocos)\n",
     "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_para_Scaloni(pedidos_prensa_10_varios)\n",
     "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(pedidos_prensa_10_todos)\n",
-    "solucion_15, tiempo_ejecucion_15 = solucion_para_Scaloni(pedidos_prensa_15)\n",
+    "#solucion_15, tiempo_ejecucion_15 = solucion_para_Scaloni(pedidos_prensa_15)\n",
     "# solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)\n",
     "# solucion_50, tiempo_ejecucion_50 = solucion_para_Scaloni(pedidos_prensa_50)\n",
     "# solucion_75, tiempo_ejecucion_75 = solucion_para_Scaloni(pedidos_prensa_75)\n",
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -461,11 +462,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                0.000245571\n",
-      "7.txt                                   2                           2  Sí                                                0.0012486\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.0678949\n",
-      "10_varios.txt                           6                           6  Sí                                                2.15234\n",
-      "10_todos.txt                           10                          10  Sí                                                6.22197\n"
+      "5.txt                                   2                           2  Sí                                                0.000333548\n",
+      "7.txt                                   2                           2  Sí                                                0.0013001\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.106941\n",
+      "10_varios.txt                           6                           6  Sí                                                2.47418\n",
+      "10_todos.txt                           10                          10  Sí                                                7.00524\n"
      ]
     }
    ],
