--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,26 +342,26 @@
     "                solucion_actual.append(jugador)\n",
     "                cantidad_de_jugadores += 1\n",
     "                \n",
-    "                if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
-    "                    if cantidad_de_jugadores < largo_solucion or largo_solucion == 0:\n",
+    "                if cantidad_de_jugadores < largo_solucion or largo_solucion == 0:\n",
+    "                    if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
     "                        solucion[:] = solucion_actual\n",
     "                        largo_solucion = cantidad_de_jugadores\n",
-    "                else:        \n",
-    "                    conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, max_jugadores, len_pedidos)\n",
+    "                    else:        \n",
+    "                        conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, max_jugadores, len_pedidos)\n",
     "                solucion_actual.pop()\n",
     "                cantidad_de_jugadores -= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 0.000989675521850586)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.0010557174682617188)\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,46 +403,17 @@
     "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_para_Scaloni(pedidos_prensa_10_pocos)\n",
     "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_para_Scaloni(pedidos_prensa_10_varios)\n",
     "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(pedidos_prensa_10_todos)\n",
-    "#solucion_15, tiempo_ejecucion_15 = solucion_para_Scaloni(pedidos_prensa_15)\n",
-    "# solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)\n",
-    "# solucion_50, tiempo_ejecucion_50 = solucion_para_Scaloni(pedidos_prensa_50)\n",
-    "# solucion_75, tiempo_ejecucion_75 = solucion_para_Scaloni(pedidos_prensa_75)\n",
-    "# solucion_100, tiempo_ejecucion_100 = solucion_para_Scaloni(pedidos_prensa_100)\n",
-    "# solucion_200, tiempo_ejecucion_200 = solucion_para_Scaloni(pedidos_prensa_200)"
+    "solucion_15, tiempo_ejecucion_15 = solucion_para_Scaloni(pedidos_prensa_15)\n",
+    "solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)\n",
+    "solucion_50, tiempo_ejecucion_50 = solucion_para_Scaloni(pedidos_prensa_50)\n",
+    "solucion_75, tiempo_ejecucion_75 = solucion_para_Scaloni(pedidos_prensa_75)\n",
+    "solucion_100, tiempo_ejecucion_100 = solucion_para_Scaloni(pedidos_prensa_100)\n",
+    "solucion_200, tiempo_ejecucion_200 = solucion_para_Scaloni(pedidos_prensa_200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"Barcon't\", 'Riquelme', 'Mauro Zarate', 'Ogro Fabianni', 'Buonanotte']"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solucion_20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -462,11 +433,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                0.000333548\n",
-      "7.txt                                   2                           2  Sí                                                0.0013001\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.106941\n",
-      "10_varios.txt                           6                           6  Sí                                                2.47418\n",
-      "10_todos.txt                           10                          10  Sí                                                7.00524\n"
+      "5.txt                                   2                           2  Sí                                                7.58171e-05\n",
+      "7.txt                                   2                           2  Sí                                                0.000181198\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.00744772\n",
+      "10_varios.txt                           6                           6  Sí                                                0.771696\n",
+      "10_todos.txt                           10                          10  Sí                                                5.68712\n"
      ]
     }
    ],
