mejoro funcion verificadora

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,15 +298,10 @@
     "    if len(C) == 0:\n",
     "        return False\n",
     "    \n",
-    "    len_B = len(B)\n",
-    "    satisface_Bi = [False] * len_B\n",
-    "\n",
-    "    for c in C:                    \n",
-    "        for i in range(len_B):\n",
-    "            if c in B[i]:            \n",
-    "                satisface_Bi[i] = True\n",
-    "\n",
-    "    return all(satisface_Bi)     "
+    "    for subconjunto in B:\n",
+    "        if not any(elemento in C for elemento in subconjunto):\n",
+    "            return False\n",
+    "    return True "
    ]
   },
   {
@@ -318,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 0.0003299713134765625)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.00036525726318359375)\n"
      ]
     }
    ],
@@ -391,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solucion_20, tiempo_ejecucion_20 = solucion_para_Scaloni(pedidos_prensa_20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -430,11 +434,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                4.19617e-05\n",
-      "7.txt                                   2                           2  Sí                                                0.000106573\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.00446296\n",
-      "10_varios.txt                           6                           6  Sí                                                0.737333\n",
-      "10_todos.txt                           10                          10  Sí                                                5.81058\n"
+      "5.txt                                   2                           2  Sí                                                0.000180483\n",
+      "7.txt                                   2                           2  Sí                                                0.000412226\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.0149386\n",
+      "10_varios.txt                           6                           6  Sí                                                0.628924\n",
+      "10_todos.txt                           10                          10  Sí                                                2.84112\n"
      ]
     }
    ],
